ifds/src/tests/icfg/snapshots/ifds__tests__icfg__fast__test_ir_return_values3_dot.snap
---
source: src/tests/icfg/fast.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (4) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (5) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (6) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (7) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (8) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (9) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (10) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (11) at (0, 3) { };
\node[font=\tiny] at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] at (-1.5, 1.5) {Const(1, 2.0)};
\node[font=\tiny] at (-1.5, 2.5) {Call(mytest, [0], [2])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (0) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (1) at (6, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (2) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (3) at (5, 1) { };
\node[font=\tiny] at (3.5, 0.5) {Return([0])};
\node[font=\tiny] at (3.5, 0.5) {Return([0])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (1);
		\path[->, blue] (2) [loop right] edge  node { } (2);
		\path[->, blue] (2) [bend right] edge  node { } (3);
		\path[->, blue] (8) [bend right] edge  node { } (4);
		\path[->, blue] (8) [bend right] edge  node { } (5);
		\path[->, blue] (8) [bend right] edge  node { } (6);
		\path[->, blue] (8) [bend right] edge  node { } (7);
		\path[->, blue] (8) [loop right] edge  node { } (8);
		\path[->, blue] (8) [bend right] edge  node { } (9);
		\path[->, blue] (8) [bend right] edge  node { } (10);
		\path[->, blue] (8) [bend right] edge  node { } (11);


                \end{tikzpicture}
            \end{document}
