ifds/src/tests/icfg/snapshots/ifds__tests__icfg__fast__test_ir_table_dot.snap
---
source: src/tests/icfg/fast.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (0) at (1, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (1) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (2) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (3) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (4) at (1, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (5) at (1, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (6) at (1, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (7) at (1, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (8) at (1, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (9) at (1, 9) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (10) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (11) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (12) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (13) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (14) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (15) at (0, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (16) at (0, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (17) at (0, 7) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (18) at (0, 8) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (19) at (0, 9) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (20) at (0, 10) { };
\node[font=\tiny] at (-1.5, 0.5) {Block(0)};
\node[font=\tiny] at (-1.5, 1.5) {Const(0, 1.0)};
\node[font=\tiny] at (-1.5, 2.5) {Const(1, 2.0)};
\node[font=\tiny] at (-1.5, 3.5) {Const(2, 3.0)};
\node[font=\tiny] at (-1.5, 4.5) {Block(1)};
\node[font=\tiny] at (-1.5, 5.5) {Const(1, 2.0)};
\node[font=\tiny] at (-1.5, 6.5) {Const(2, 3.0)};
\node[font=\tiny] at (-1.5, 7.5) {Block(2)};
\node[font=\tiny] at (-1.5, 8.5) {Const(2, 4.0)};
\node[font=\tiny] at (-1.5, 9.5) {Table([0, 1, 2, 2])};
		\path[->, blue] (10) [loop right] edge  node { } (10);
		\path[->, blue] (10) [bend right] edge  node { } (11);
		\path[->, blue] (10) [bend right] edge  node { } (12);
		\path[->, blue] (10) [bend right] edge  node { } (13);
		\path[->, blue] (10) [bend right] edge  node { } (14);
		\path[->, blue] (10) [bend right] edge  node { } (15);
		\path[->, blue] (10) [bend right] edge  node { } (16);
		\path[->, blue] (10) [bend right] edge  node { } (17);
		\path[->, blue] (10) [bend right] edge  node { } (18);
		\path[->, blue] (10) [bend right] edge  node { } (19);
		\path[->, blue] (10) [bend right] edge  node { } (20);
		\path[->, blue] (11) [bend right] edge  node { } (0);
		\path[->, blue] (11) [bend right] edge  node { } (1);
		\path[->, blue] (11) [bend right] edge  node { } (2);
		\path[->, blue] (11) [bend right] edge  node { } (3);
		\path[->, blue] (11) [bend right] edge  node { } (4);
		\path[->, blue] (11) [bend right] edge  node { } (5);
		\path[->, blue] (11) [bend right] edge  node { } (6);
		\path[->, blue] (11) [bend right] edge  node { } (7);
		\path[->, blue] (11) [bend right] edge  node { } (8);
		\path[->, blue] (11) [bend right] edge  node { } (9);
		\path[->, blue] (11) [loop right] edge  node { } (11);


                \end{tikzpicture}
            \end{document}
